# snowflakepy

./: main.py  pyproject.toml
app/: conn.py  test.py
