[project]
name = "snowflakepy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.2",
    "snowflake-connector-python[pandas,secure-local-storage]>=4.6.0",
    "snowflake-demos>=0.1.5",
    "snowflake-sqlalchemy>=1.10.2",
]
